--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+#spring.datasource.url=jdbc:mariadb://localhost:3307/giants
+#spring.datasource.username=giants
+#spring.datasource.password=giants
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:springcoredb
