Likes entity 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 
 spring.datasource.url=jdbc:mariadb://localhost:3307/giants
-spring.datasource.username=giants
-spring.datasource.password=giants
+spring.datasource.username=myadmin
+spring.datasource.password=myadmin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 spring.jpa.properties.hibernate.format_sql=true
 
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:springcoredb
+
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=<googleid>
+#spring.mail.password=<googlepassword>
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
